infra/kubernetes/manifests/server/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gemini-server-deployment
  labels:
    app: gemini-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gemini-server # Этот селектор связывает Deployment с Подами
  template: # Это шаблон для создания Подов
    metadata:
      labels:
        app: gemini-server
        logging: "true"
    spec:
      containers:
      - name: gemini-server
        image: isnov/gemini-gateway:server
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
